<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"

    android:orientation="vertical"
    tools:context="com.example.android.takehomeassignment07_vilmariet.MainActivity">

    <TextView
        android:id="@+id/statement"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:paddingTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textSize="20sp"



      />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@color/yellow"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/trueButton"
            android:onClick="trueButton"

            />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@color/yellow"
            android:textStyle="bold"
            android:text="@string/falseButton"
            android:textSize="16sp"
            android:onClick="falseButton"
            />

    </LinearLayout>
    <Button
        android:id="@+id/cheat_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheatButton"
        android:background="@color/darkBlue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_button"
            android:background="@color/darkBlue"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="previousButton"
            />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/darkBlue"/>

    </LinearLayout>


</LinearLayout>
